# rust-territorial

./: .gitignore  Cargo.toml
src/: main.rs
src/modules/: config.rs  mod.rs  timing.rs  types.rs
src/modules/game/: grid.rs  initialization.rs  mod.rs  neighbors.rs  state.rs  territory.rs  update.rs
src/modules/map_loader/: cache.rs  mod.rs  pickle.rs  temperature.rs  transform.rs
src/modules/types/: attack.rs  biome.rs  biome_type.rs  mod.rs  player.rs  world_map.rs
src/web/: index.html  mod.rs  package-lock.json  package.json  vite.config.js  websocket.rs
src/web/src/: App.jsx  store.js
src/web/src/components/: GameRenderer.jsx
