[package]
name = "rust_territorial"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { version = "0.3", default-features = false }
lazy_static = "1.4"
