[package]
name = "rust_territorial"
version = "0.1.0"
edition = "2021"

[dependencies]
rand = "0.8"
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio-stream = { version = "0.1", features = ["sync"] }
futures = { version = "0.3", default-features = false }
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"
clap = { version = "4.4", features = ["derive"] }
ndarray = { version = "0.15", features = ["serde"] }
image = "0.24"
once_cell = "1.8"
sha2 = "0.10"
serde-pickle = "1.1"
ndarray-npy = "0.8"
flate2 = "1.0"
base16ct = { version = "0.2", features = ["alloc"] }
